[FIXED] fixed remote exec